--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: web
     container_name: web_server
     ports:
-      - "5000:5000"
+      - "80:5000" # http
     tty: yes
     environment:
       TZ: Asia/Tokyo
